# polyglot-c-headers

./: CMakeLists.txt  Readme.md  Readme_en.md
.github/workflows/: run-tests.yml
examples/: CMakeLists.txt  concat_files.py  execute_script.cpp  play_mp4.cpp  run_exe.cpp
resources/: CMakeLists.txt  patch_gameinstaller.py
scripts/: build_elf.py  build_exe.py  build_mp4.py
tests/: CMakeLists.txt  check_play_video.cmake  chmod.cmake  compare_videos.cmake  copy_file_rev.sh  dump_to_file.c  elf2_callback.cmake  elf2_init.cmake  elf_callback.cmake  elf_init.cmake  exe_callback.cmake  exe_init.cmake  generate_sources.cmake  hello.c  main.cpp.in  mp4_callback.cmake  mp4_init.cmake  print_hello.sh  script_callback.cmake  script_init.cmake  test_weak_symbol.cpp.in
